Dev/loki-ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: loki
  labels:
    app: loki
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Scope-OrgID: cluster-name";
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false" 
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: loki-servicename
          servicePort: 3100
        path: /cluster-name/loki/*
